[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtpy-filedialog"
version = "0.1.0"
description = "Pure-Python Qt file dialog and filesystem model stack (qtpy)"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [
    "qtpy",
]

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/qtpy-filedialog"
Repository = "https://github.com/oldrepublicwizard/qtpy-filedialog"

[tool.setuptools.packages.find]
where = ["src"]
